# intent-flow

./: .gitignore  architecture.md  index.html  package-lock.json  package.json  tailwind.config.js  technical-specification.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_utf8.txt  build_output_utf8_2.txt  build_output_utf8_3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: activity.rs  app_control.rs  chat.rs  dashboard.rs  entry.rs  intent.rs  mod.rs  query.rs  settings.rs  storage.rs  workflow.rs
src-tauri/src/database/: mod.rs  queries.rs  schema.rs
src-tauri/src/models/: activity.rs  category.rs  dashboard.rs  entry.rs  intent.rs  mod.rs  pattern.rs  query.rs  settings.rs  storage.rs  workflow.rs
src-tauri/src/services/: activity_tracker.rs  clipboard_tracker.rs  dashboard_engine.rs  file_monitor.rs  mod.rs  pattern_engine.rs  query_engine.rs  screen_capture.rs
src-tauri/src/utils/: mod.rs  windows.rs
src/components/Chat/: ChatMessage.tsx  ChatPage.tsx  ChatSidebar.tsx
src/components/Dashboard/: ActivityCharts.tsx  Dashboard.tsx  PersonalDashboard.tsx
src/components/Home/: ActivityTimebar.tsx  HomePage.tsx
src/components/Layout/: AppShell.tsx  Sidebar.tsx
src/components/Query/: QueryInput.tsx  QueryResults.tsx
src/hooks/: useActivities.ts  useFavoriteModels.ts  useSettings.ts  useWorkflows.ts
src/lib/: utils.ts
src/services/: tauri.ts
src/types/: index.ts
(+9 files in other folders)
